# CS2qif

./: COPYING  Jenkinsfile  MANIFEST.in  README.md  requires.txt  setup.cfg  setup.py
Qif/: Converter.py  QifConverter.py  categories.json  cs2qif  export.qif
Qif/data/: ciccio.qif
Qif/tests/: test_Stock.py
cs2qif/: QifConverter.py
cs2qif/tests/: test_converter.py
cs2qif/tests/data/: amex.csv  konto.csv
